# rs-pkauth-c

./: Cargo.toml  Makefile  build.rs  test.c
src/: lib.rs  stable_ptr.rs
