[package]
name = "pkauth-c"
version = "0.1.0"
authors = ["James Parker <dev@jamesparker.me>"]
# build = "build.rs"

[lib]
name = "pkauth_c"
crate-type = ["staticlib"]

[dependencies]
pkauth = {path="../rs-pkauth"}
ring = {git = "https://github.com/briansmith/ring.git", ref = "8411c0098ac1f8b4b96d0766a5057aae5e78c42a"} # "0.12.1"
# ring = "*"
publicsuffix = "*"
serde = "*"
serde_json = "*"
staticpublicsuffix = {path="../../../Projects/staticpublicsuffix/"}

[build-dependencies]
cbindgen = "*"
