[package]
name = "pkauth-c"
version = "0.1.0"
authors = ["James Parker <dev@jamesparker.me>"]
# build = "build.rs"

[lib]
name = "pkauth_c"
crate-type = ["staticlib"]

[dependencies]
base64 = "*"
pkauth = {path="../rs-pkauth"}
publicsuffix = "*"
ring = "*"
serde = "*"
serde_json = "*"
staticpublicsuffix = {path="../../../Projects/staticpublicsuffix/"}

[build-dependencies]
cbindgen = "*"
